Обновлена структура контроллеров