@@ -127,13 +127,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <argLine>
-                        --add-opens javafx.base/com.sun.javafx=ALL-UNNAMED
-                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                        --add-opens javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
-                        --add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED
-                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
+                    <forkCount>0</forkCount>
+                    <argLine>--add-opens javafx.base/com.sun.javafx=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
